css fix button align

--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -5,10 +5,12 @@
     /* justify-content: space-between; */
     border: 1px solid black;
     border-radius: 4px;
-    /* padding: 10px;
-    margin-bottom: 10px; */
+    padding: 10px;
+    margin-bottom: 10px;
     width: 100%;
     margin: 10px;
+
+
 
 
 }
@@ -44,4 +46,7 @@
     display: flex;
     margin: 5px;
     min-width: 100px;
+    margin-left: auto;
+
+    /* pushes the button to the right */
 }
